--- a/custom-news-client/app/templates/login.hbs
+++ b/custom-news-client/app/templates/login.hbs
@@ -8,4 +8,4 @@
    <button type="submit" {{action 'submit'}}>Login</button>
 </div>
 <br/>
-New user? Click {{#link-to "new-user"}}here{{/link-to}}
+New user? Click {{#link-to "new-user"}}here{{/link-to}}.
