--- a/custom-news-client/app/templates/sources.hbs
+++ b/custom-news-client/app/templates/sources.hbs
@@ -1,7 +1,8 @@
+{{nav-bar}}
 <h2>
-  HOME
+  SOURCES
 </h2>
-<ul class="people_list">
+<ul class="sourcesS">
   {{#each sources as |source|}}
     {{source-card id=source.id name=source.name description=source.description viewSourceArticles=(action 'viewSourceArticles')}}
   {{/each}}
