--- a/custom-news-client/app/templates/new-user.hbs
+++ b/custom-news-client/app/templates/new-user.hbs
@@ -1,8 +1,8 @@
 <div class="container">
-   <label for="uname"><b>Username</b></label>
+   <label><b>Username</b></label>
    {{input type="text" value=username}}
 
-   <label for="psw"><b>Password</b></label>
+   <label><b>Password</b></label>
    {{input type="text" value=password}}
 
    <button type="submit" {{action 'createUser'}}>Create User</button>
